--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 			<!-- Calculator Section -->
 			<section class="calculator-section">
 				<div class="containerCalculator">
-					<h2 class="form-titleCalculator">Digite os dados do financiamento</h2>
+					<h2 class="form-titleCalculator">Calculadora online Revisional</h2>
+					<h3 class="form-titleSubCalculator">Informe os dados do seu financiamento</h3>
 					<form>
 						<div class="row g-3">
 							<div class="col-md-6">
@@ -82,9 +83,13 @@
 							</div>
 							<div class="col-md-6">
 								<label for="dataAssinaturaMes" class="form-label">Data assinatura do contrato</label>
-								<div class="d-flex">
-									<input type="text" class="form-control me-2" id="dataAssinaturaMes" placeholder="Mês">
-									<input type="text" class="form-control" id="dataAssinaturaAno" placeholder="Ano">
+								<div class="row">
+									<div class="col-md-6">
+										<input type="text" class="form-control" id="dataAssinaturaMes" placeholder="Mês">
+									</div>
+									<div class="col-md-6">
+										<input type="text" class="form-control" id="dataAssinaturaAno" placeholder="Ano">
+									</div>
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -92,13 +97,17 @@
 								<input type="number" class="form-control" id="parcelasPagas" placeholder="">
 							</div>
 						</div>
-						<div class="d-flex justify-content-between">
-							<button type="reset" class="btn btn-clear">Limpar campos</button>
-							<button type="submit" class="btn btn-orange">Mostrar dados da dívida atual</button>
+						<div class="row g-3 mt-4">
+							<div class="col-md-6 containerCalculadora">
+								<button type="reset" class="btn btn-clear w-100">Limpar campos</button>
+							</div>
+							<div class="col-md-6 containerCalculadora">
+								<button type="submit" class="btn btn-orange w-100">Mostrar dados da dívida atual</button>
+							</div>
 						</div>
 					</form>
 				</div>
-			</section>
+			</section>			
 
 			<!-- Carrosel  -->
 			<section class="sectionCarrosel">
