--- a/index.html
+++ b/index.html
@@ -327,44 +327,44 @@
 
 			<!-- Footer -->
 			<footer id="gtco-footer" class="gtco-sectionFooter" role="contentinfo">
-				<div class="row row-pb-md">
-					<div class="col-md-4 gtco-widget gtco-footer-paragraph">
-						<img src="images/LogoSemContato.svg" alt="Logo PBB Assessoria Jurídica">
+				<div class="row row-pb-md rowFooter">
+					<div class="col-md-4 imageFooter">
+						<img src="images/PBB_Assessoria.svg" alt="Logo escrito PBB Assessoria, fundo preto letras dourado" class="logoFooter">
 					</div>
-					<div class="col-md-4">
-						<div class="row">
-							<div class="col-md-6 gtco-footer-link">
-								<h3>Links</h3>
-								<ul class="gtco-list-link">
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Features</a></li>
-									<li><a href="#">Products</a></li>
-									<li><a href="#">Testimonial</a></li>
-									<li><a href="#">Contact</a></li>
-								</ul>
-							</div>
-							<div class="col-md-6 gtco-footer-link">
-								<h3>Work</h3>
-								<ul class="gtco-list-link">
-									<li><a href="#">New York Arena</a></li>
-									<li><a href="#">Eagle Park</a></li>
-									<li><a href="#">Nationals Park</a></li>
-									<li><a href="#">Manila Park</a></li>
-								</ul>
-							</div>
-						</div>
+					<div class="col-md-4 enderecoFooter text-center">
+						<h3 class="titleFooter">Endereço</h3>
+						<p class="addressFooter">Rua Santo Inácio,  Bairro Moinhos de Vento<br>Porto Alegre - Rio Grande do Sul<br>CEP 90570-150</p>
 					</div>
-					<div class="col-md-4 gtco-footer-subscribe">
-						<form class="form-inline">
-						<div class="form-group">
-							<label class="sr-only" for="exampleInputEmail3">Email address</label>
-							<input type="email" class="form-control" id="" placeholder="Email">
-						</div>
-						<button type="submit" class="btn btn-primary">Send</button>
-						</form>
+					<div class="col-md-4 socialLinks d-flex align-items-center justify-content-center">
+						<a href="https://facebook.com" target="_blank" rel="noopener" class="social-icon">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+						</a>
+						<a href="https://twitter.com" target="_blank" rel="noopener" class="social-icon">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" />
+						</a>
+						<a href="https://instagram.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" />
+						</a>
+						<a href="https://linkedin.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" />
+						</a>
+						<a href="https://wa.me/5551995746554?text=PBB%20Assessoria%20Jur%C3%ADdica" target="_blank" rel="noopener" class="social-icon">
+							<img src="https://static.cdnlogo.com/logos/w/29/whatsapp-icon.svg" alt ="WhatsApp"></a>
+						</a>
 					</div>
 				</div>
-			</footer>
+				<div class="footer-copyright">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="copyright text-center">
+									<p class="textFooter">Copyright © 2025 <a class="linkFooter" rel="nofollow" href="https://pbbassessoria.com.br">PBB Assessoria Jurídica</a> - desenvolvido por <a class="linkFooter" el="nofollow" href="https://www.linkedin.com/in/nsdebona/">Natanael da Silva Debona</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>			
 			<!-- END footer -->
 		</div>
 
