fix responsiveness on footer

--- a/index.html
+++ b/index.html
@@ -327,32 +327,35 @@
 
 			<!-- Footer -->
 			<footer id="gtco-footer" class="gtco-sectionFooter" role="contentinfo">
-				<div class="row row-pb-md rowFooter">
-					<div class="col-md-4 imageFooter">
-						<img src="images/PBB_Assessoria.svg" alt="Logo escrito PBB Assessoria, fundo preto letras dourado" class="logoFooter">
+				<div class="row rowFooter text-center text-md-start">
+					<!-- Logo -->
+					<div class="col-12 col-md-4 mb-3 mb-md-0 imageFooter">
+						<img src="images/PBB_Assessoria.svg" alt="Logo escrito PBB Assessoria, fundo preto letras dourado" class="logoFooter img-fluid">
 					</div>
-					<div class="col-md-4 enderecoFooter text-center">
+					<!-- Endereço -->
+					<div class="col-12 col-md-4 mb-3 mb-md-0 enderecoFooter">
 						<h3 class="titleFooter">Endereço</h3>
-						<p class="addressFooter">Rua Santo Inácio,  Bairro Moinhos de Vento<br>Porto Alegre - Rio Grande do Sul<br>CEP 90570-150</p>
+						<p class="addressFooter">Rua Santo Inácio, Bairro Moinhos de Vento<br>Porto Alegre - Rio Grande do Sul<br>CEP 90570-150</p>
 					</div>
-					<div class="col-md-4 socialLinks d-flex align-items-center justify-content-center">
-						<a href="https://facebook.com" target="_blank" rel="noopener" class="social-icon">
-							<img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" />
+					<!-- Ícones de Redes Sociais -->
+					<div class="col-12 col-md-4 socialLinks d-flex justify-content-center align-items-center">
+						<a href="https://facebook.com" target="_blank" rel="noopener" class="social-icon mx-2">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook" class="img-fluid" style="width: 30px;">
 						</a>
-						<a href="https://twitter.com" target="_blank" rel="noopener" class="social-icon">
-							<img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" />
+						<a href="https://twitter.com" target="_blank" rel="noopener" class="social-icon mx-2">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" class="img-fluid" style="width: 30px;">
 						</a>
-						<a href="https://instagram.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon">
-							<img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" />
+						<a href="https://instagram.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon mx-2">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" class="img-fluid" style="width: 30px;">
 						</a>
-						<a href="https://linkedin.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon">
-							<img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" />
+						<a href="https://linkedin.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon mx-2">
+							<img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" class="img-fluid" style="width: 30px;">
 						</a>
-						<a href="https://wa.me/5551995746554?text=PBB%20Assessoria%20Jur%C3%ADdica" target="_blank" rel="noopener" class="social-icon">
-							<img src="https://static.cdnlogo.com/logos/w/29/whatsapp-icon.svg" alt ="WhatsApp"></a>
+						<a href="https://wa.me/5551995746554?text=PBB%20Assessoria%20Jur%C3%ADdica" target="_blank" rel="noopener" class="social-icon mx-2">
+							<img src="https://static.cdnlogo.com/logos/w/29/whatsapp-icon.svg" alt="WhatsApp" class="img-fluid" style="width: 30px;">
 						</a>
 					</div>
-				</div>
+				</div>				
 				<div class="footer-copyright">
 					<div class="container">
 						<div class="row">
