--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 		</header>
 
 		<div id="page">
-
 			<!-- Calculator Section -->
 			<section class="calculator-section">
 				<div class="containerCalculator">
@@ -157,7 +156,6 @@
 						</div>
 					</div>
 					<div class="row">
-
 						<div class="col-md-12">
 							<div class="owl-carousel owl-carousel-carousel">
 								<div class="item">
@@ -285,44 +283,69 @@
 			<!-- End News  -->
 			
 			<!-- Contact -->
-			<section class="sectionContact">
-				<div class="gtco-section gto-features">
+			<section class="sectionService">
 				<div class="gtco-container">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="feature-left">
-								<i class="ti-zip icon"></i>
-								<div class="copy">
-									<h3>Architect</h3>
-									<p>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</p>
-									<p><a href="#" class="gtco-more">Learn more</a></p>
+					<div class="services-section align-items-center">
+						<h2>Conheça nossos Serviços</h2>
+						<div class="row g-4 justify-content-center align-items-center rowServices">
+							<div class="col-6 col-md-6 col-lg-2 cardService">
+								<div class="service-card">
+									<div class="service-icon">
+										<img src="images/tow-truck.png" alt="Ícone">
+									</div>
+									<p>Defesa contra busca e apreensão ou execução judicial de bens adquiridos.</p>
+                    			</div>
+							</div>
+			
+							<div class="col-6 col-md-6 col-lg-2 cardService">
+								<div class="service-card">
+									<div class="service-icon">
+										<img src="images/revisao.png" alt="Ícone">
+									</div>
+									<p>Revisão de contratos bancários e financiamentos para redução de juros abusivos.</p>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="feature-left">
-								<i class="ti-hummer icon"></i>
-								<div class="copy">
-									<h3>Planning</h3>
-									<p>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</p>
-									<p><a href="#" class="gtco-more">Learn more</a></p>
+			
+							<div class="col-6 col-md-6 col-lg-2 cardService">
+								<div class="service-card">
+									<div class="service-icon">
+										<img src="images/leilao.png" alt="Ícone">
+									</div>
+									<p>Contestação de leilão extrajudicial de imóveis e veículos por irregularidades.</p>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="feature-left">
-								<i class="ti-plug icon"></i>
-								<div class="copy">
-									<h3>Parks &amp; Events</h3>
-									<p>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</p>
-									<p><a href="#" class="gtco-more">Learn more</a></p>
+			
+							<div class="col-6 col-md-6 col-lg-2 cardService">
+								<div class="service-card">
+									<div class="service-icon">
+										<img src="images/multa.png" alt="Ícone">
+									</div>
+									<p>Recursos e defesa administrativa contra multas e infrações de trânsito aplicadas.</p>
+								</div>
+							</div>
+			
+							<div class="col-6 col-md-6 col-lg-2 cardService">
+								<div class="service-card">
+									<div class="service-icon">
+										<img src="images/falar.png" alt="Ícone">
+									</div>
+									<p>Acompanhamento de dívida com suporte contínuo e contato direto com o advogado.</p>
+								</div>
+							</div>
+
+							<div class="col-6 col-md-6 col-lg-2 cardService">
+								<div class="service-card">
+									<div class="service-icon">
+										<img src="images/equipe.png" alt="Ícone">
+									</div>
+									<p>Equipe qualificada e experientes, com foco soluções eficazes e personalizadas</p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				</div>
 			</section>
+			
 			<!-- End Contact -->
 
 			<!-- Footer -->
@@ -348,7 +371,7 @@
 						<a href="https://instagram.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon mx-2">
 							<img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" class="img-fluid" style="width: 30px;">
 						</a>
-						<a href="https://linkedin.com/pbbassessoria" target="_blank" rel="noopener" class="social-icon mx-2">
+						<a href="https://www.linkedin.com/company/pbb-assessoria/" target="_blank" rel="noopener" class="social-icon mx-2">
 							<img src="https://cdn-icons-png.flaticon.com/512/733/733561.png" alt="LinkedIn" class="img-fluid" style="width: 30px;">
 						</a>
 						<a href="https://wa.me/5551995746554?text=PBB%20Assessoria%20Jur%C3%ADdica" target="_blank" rel="noopener" class="social-icon mx-2">
