fix cards resnponsive

--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
 			
 			<!-- Contact -->
 			<section class="sectionService">
-				<div class="gtco-container">
-					<div class="services-section align-items-center">
+				<div class="gtco-container divServices">
+					<div class="services-section align-items-center ">
 						<h2>Conheça nossos Serviços</h2>
 						<div class="row g-4 justify-content-center align-items-center rowServices">
-							<div class="col-6 col-md-6 col-lg-2 cardService">
+							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
 								<div class="service-card">
 									<div class="service-icon">
 										<img src="images/tow-truck.png" alt="Ícone">
@@ -297,7 +297,7 @@
                     			</div>
 							</div>
 			
-							<div class="col-6 col-md-6 col-lg-2 cardService">
+							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
 								<div class="service-card">
 									<div class="service-icon">
 										<img src="images/revisao.png" alt="Ícone">
@@ -306,7 +306,7 @@
 								</div>
 							</div>
 			
-							<div class="col-6 col-md-6 col-lg-2 cardService">
+							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
 								<div class="service-card">
 									<div class="service-icon">
 										<img src="images/leilao.png" alt="Ícone">
@@ -315,7 +315,7 @@
 								</div>
 							</div>
 			
-							<div class="col-6 col-md-6 col-lg-2 cardService">
+							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
 								<div class="service-card">
 									<div class="service-icon">
 										<img src="images/multa.png" alt="Ícone">
@@ -324,7 +324,7 @@
 								</div>
 							</div>
 			
-							<div class="col-6 col-md-6 col-lg-2 cardService">
+							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
 								<div class="service-card">
 									<div class="service-icon">
 										<img src="images/falar.png" alt="Ícone">
@@ -333,7 +333,7 @@
 								</div>
 							</div>
 
-							<div class="col-6 col-md-6 col-lg-2 cardService">
+							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
 								<div class="service-card">
 									<div class="service-icon">
 										<img src="images/equipe.png" alt="Ícone">
