fix responsiveness about section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			</section>			
 			
 			<!-- Contact -->
-			<section class="sectionService" id="services">
+			<!-- <section class="sectionService" id="services">
 				<div class="containerService">
 					<div class="row rowContact">
 						<div class="col-md-8 col-md-offset-2 gtco-heading text-center">
@@ -194,7 +194,7 @@
 						</div>
 					</div>
 				</div>
-			</section> 
+			</section>  -->
 			<!-- End contact -->
 
 			<!-- Service -->
@@ -263,42 +263,42 @@
 			<!-- End service -->
 
 			<!-- About -->
-			<section class="sectionAbout" id="about">
-				<div class="containerAbout">
-					<div class="row rowAbout">
-						<div class="col colAboutTxt">
-							<div class="paragraphAbout">
-								<h1>Sobre Nós</h1>
-								<p>
-									Somos uma assessoria contenciosa especializada em Direito Bancário, Direito do Consumidor e Direito do Condutor.
-								</p>
-								<p>	
-									Nossa equipe é formada por profissionais jovens, dinâmicos e altamente experientes, sempre comprometidos em oferecer soluções jurídicas eficazes e personalizadas.
-								</p>
-								<p>
-									Acreditamos em uma advocacia humanizada, pautada na transparência, no atendimento próximo e no compromisso com os melhores interesses de nossos clientes. Nosso objetivo é proporcionar segurança jurídica e estratégias assertivas, sempre com excelência e dedicação.
-								</p>
-								<p>
-									Conte conosco para uma assessoria que alia conhecimento, inovação e proximidade no acompanhamento de suas demandas jurídicas.
-								</p>
-							</div>					
+			<section class="section-about" id="about">
+				<div class="container-about">
+					<div class="row about-content">
+						<div class="col about-text">
+							<h1>Sobre Nós</h1>
+							<p>
+								Somos uma assessoria contenciosa especializada em Direito Bancário, Direito do Consumidor e Direito do Condutor.
+							</p>
+							<p>
+								Nossa equipe é formada por profissionais jovens, dinâmicos e altamente experientes, sempre comprometidos em oferecer soluções jurídicas eficazes e personalizadas.
+							</p>
+							<p>
+								Acreditamos em uma advocacia humanizada, pautada na transparência, no atendimento próximo e no compromisso com os melhores interesses de nossos clientes. Nosso objetivo é proporcionar segurança jurídica e estratégias assertivas, sempre com excelência e dedicação.
+							</p>
+							<p>
+								Conte conosco para uma assessoria que alia conhecimento, inovação e proximidade no acompanhamento de suas demandas jurídicas.
+							</p>
 						</div>
-						<div class="col colAbout">
-							<img src="images/aboutT1.jpg" alt="Advogado Fotos de banco de imagens por Vecteezy">
+						<div class="col about-image">
+							<img src="images/aboutT1.jpg" alt="Advogado trabalhando">
 						</div>
 					</div>
-					<div class="row rowAboutMission">
-						<div class="col colAbout">
-							<h1 class="missionAbout">Missão</h1>
+			
+					<div class="row mission-vision">
+						<div class="col mission">
+							<h2>Missão</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
 						</div>
-						<div class="col colAbout">
-							<h1 class="visionAbout">Visão</h1>
+						<div class="col vision">
+							<h2>Visão</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit!</p>
 						</div>
 					</div>
 				</div>
 			</section>
+			
 			<!-- end about -->
 
 			<!-- Contact -->
