fix design and responsiveness works

--- a/index.html
+++ b/index.html
@@ -198,68 +198,57 @@
 			<!-- End contact -->
 
 			<!-- Service -->
-			<section class="sectionService" id="services">
-				<div class="gtco-container divServices">
-					<div class="services-section align-items-center">
-						<h2>Conheça nossos Serviços</h2>
-						<div class="row g-4 justify-content-center align-items-center rowServices">
-							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
-								<div class="service-card">
-									<div class="service-icon">
-										<img src="images/tow-truck.png" alt="Ícone">
-									</div>
-									<p>Defesa contra busca e apreensão ou execução judicial de bens adquiridos.</p>
-                    			</div>
+			<section class="section-services" id="services">
+				<div class="container">
+					<div class="services-header">
+						<h2>Nossos Serviços</h2>
+					</div>
+					<div class="services-grid">
+						<div class="service-card">
+							<div class="service-icon">
+								<img src="images/tow-truck.png" alt="Defesa contra busca e apreensão">
 							</div>
+							<p>Defesa contra busca e apreensão ou execução judicial de bens adquiridos.</p>
+						</div>
 			
-							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
-								<div class="service-card">
-									<div class="service-icon">
-										<img src="images/revisao.png" alt="Ícone">
-									</div>
-									<p>Revisão de contratos bancários e financiamentos para redução de juros abusivos.</p>
-								</div>
+						<div class="service-card">
+							<div class="service-icon">
+								<img src="images/revisao.png" alt="Revisão de contratos bancários">
 							</div>
+							<p>Revisão de contratos bancários e financiamentos para redução de juros abusivos.</p>
+						</div>
 			
-							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
-								<div class="service-card">
-									<div class="service-icon">
-										<img src="images/leilao.png" alt="Ícone">
-									</div>
-									<p>Contestação de leilão extrajudicial de imóveis por irregularidades.</p>
-								</div>
+						<div class="service-card">
+							<div class="service-icon">
+								<img src="images/leilao.png" alt="Contestação de leilão extrajudicial">
 							</div>
+							<p>Contestação de leilão extrajudicial de imóveis por irregularidades.</p>
+						</div>
 			
-							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
-								<div class="service-card">
-									<div class="service-icon">
-										<img src="images/multa.png" alt="Ícone">
-									</div>
-									<p>Recursos e defesa administrativa e judicial contra multas e infrações de trânsito aplicadas.</p>
-								</div>
+						<div class="service-card">
+							<div class="service-icon">
+								<img src="images/multa.png" alt="Defesa contra multas de trânsito">
 							</div>
+							<p>Recursos e defesa administrativa e judicial contra multas e infrações de trânsito aplicadas.</p>
+						</div>
 			
-							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
-								<div class="service-card">
-									<div class="service-icon">
-										<img src="images/falar.png" alt="Ícone">
-									</div>
-									<p>Acompanhamento de dívida com suporte contínuo e contato direto com o advogado.</p>
-								</div>
+						<div class="service-card">
+							<div class="service-icon">
+								<img src="images/falar.png" alt="Acompanhamento de dívida">
 							</div>
-
-							<div class="col-6 col-sm-6 col-md-4 col-lg-2 d-flex justify-content-center cardService">
-								<div class="service-card">
-									<div class="service-icon">
-										<img src="images/equipe.png" alt="Ícone">
-									</div>
-									<p>Equipe qualificada e experientes, com foco soluções eficazes e personalizadas</p>
-								</div>
+							<p>Acompanhamento de dívida com suporte contínuo e contato direto com o advogado.</p>
+						</div>
+			
+						<div class="service-card">
+							<div class="service-icon">
+								<img src="images/equipe.png" alt="Equipe qualificada">
 							</div>
+							<p>Equipe qualificada e experiente, com foco em soluções eficazes e personalizadas.</p>
 						</div>
 					</div>
 				</div>
 			</section>
+			
 			<!-- End service -->
 
 			<!-- About -->
