fix responsiveness and layout contact

--- a/index.html
+++ b/index.html
@@ -116,7 +116,47 @@
 						</div>
 					</form>
 				</div>
-			</section>			
+			</section>		
+			
+			<section class="contact-services">
+				<div class="container-services">
+					<h2>Destaques</h2>
+					<div class="contact-cards">
+						<!-- Card 1 -->
+						<div class="contact-card">
+							<img src="images/leilao.webp" alt="Imagem do leilão">
+							<h3>LEILÃO EXTRAJUDICIAL</h3>
+							<p>A PBB Assessoria é referência em ações de suspensão de leilão extrajudicial.</p>
+							<button class="btn-contact">ENTRAR EM CONTATO</button>
+						</div>
+			
+						<!-- Card 2 -->
+						<div class="contact-card">
+							<img src="images/revisional.webp" alt="Revisão contratual">
+							<h3>REVISÃO CONTRATUAL</h3>
+							<p>Analisamos contratos bancários para reduzir juros abusivos.</p>
+							<button class="btn-contact">ENTRAR EM CONTATO</button>
+						</div>
+			
+						<!-- Card 3 -->
+						<div class="contact-card">
+							<img src="images/titulos.webp" alt="Suporte jurídico">
+							<h3>Execução de Títulos</h3>
+							<p>Especializada em defesas de ações de execução de título extrajudicial e monitória.</p>
+							<button class="btn-contact">ENTRAR EM CONTATO</button>
+						</div>
+			
+						<!-- Card 4 -->
+						<div class="contact-card">
+							<img src="images/multas.JPG" alt="Ações Revisionais">
+							<h3>Multas de Transito</h3>
+							<p>Recursos e defesa administrativa e judicial contra multas e infrações de trânsito aplicadas.</p>
+							<button class="btn-contact">ENTRAR EM CONTATO</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			
 			
 			<!-- Contact -->
 			<!-- <section class="sectionService" id="services">
